@@ -8,8 +8,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>18</source>
-                    <target>18</target>
+                    <source>19</source>
+                    <target>19</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -28,5 +29,13 @@
     <properties>
         <java.version>19</java.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>uz_nt-korzinka</groupId>
+            <artifactId>shared-libs</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
     
 </project>
